# task-orchectrator-mcp

./: .gitignore  .npmignore  CHANGELOG.md  LICENSE  README.md  package.json  pyproject.toml  server.json
.github/workflows/: publish-npm.yml  publish.yml
docs/: BUILD_AND_PUBLISH.md  MCP_REGISTRY_PUBLISH.md  MCP_SETUP_INSTRUCTIONS.md  PUBLISH_NOW.md  QUICK_PUBLISH.md  README.md  ROLE_PERMISSIONS_SUMMARY.md  ROLE_SYSTEM_GUIDE.md  TRELLO_INTEGRATION_GUIDE.md  TRELLO_TOKEN_SETUP.md
scripts/: postinstall.js  publish.ps1  publish.sh
src/task_orchectrator_mcp/: __init__.py  server.py
