[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "task-orchectrator-mcp"
version = "0.2.2"
description = "A role-based task orchestrator with three-tier Trello integration for MCP"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "DaymaNKinG990", email = "xellaopromaster@yandex.ru"}
]
keywords = ["mcp", "task-orchestration", "trello", "project-management", "workflow", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "py-trello>=0.19.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/DaymaNKinG990/task-orchectrator-mcp"
Repository = "https://github.com/DaymaNKinG990/task-orchectrator-mcp"
Documentation = "https://github.com/DaymaNKinG990/task-orchectrator-mcp#readme"
"Bug Tracker" = "https://github.com/DaymaNKinG990/task-orchectrator-mcp/issues"

[project.optional-dependencies]
dev = [
    "build",
    "twine",
]

[tool.hatch.build.targets.wheel]
packages = ["src/task_orchectrator_mcp"]

[dependency-groups]
dev = [
    "build",
    "twine",
]
