[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "task-orchectrator-mcp"
version = "0.3.0"
description = "A Model Context Protocol (MCP) server for task orchestration with role-based workflow management and Trello integration"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Dayman King", email = "daymanking990@gmail.com"}
]
keywords = ["mcp", "task-management", "orchestration", "workflow", "trello", "ai", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "py-trello>=0.19.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/daymanking990/task-orchectrator-mcp"
Repository = "https://github.com/daymanking990/task-orchectrator-mcp"
Issues = "https://github.com/daymanking990/task-orchectrator-mcp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/task_orchectrator_mcp"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]
